Fixes blog text rendering on iOS

--- a/style.scss
+++ b/style.scss
@@ -278,6 +278,10 @@ video {
     font-style: italic;
   }
 
+  .entry {
+    -webkit-text-size-adjust: none;
+  }
+
   .comments {
     margin-top: 10px;
   }
